# numerologie_cli

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html
ui/js/: main.js
